src/syn/snapshots/tvm__syn__tests__lone_fn_keyword.snap
---
source: src/syn/tests.rs
expression: "parse!(r#\"\n    fn\n  \"#)"
---
error: expected token `identifier`
1 |  fn
  |   ^

error: expected token `{`
1 |  fn
  |   ^

